--- a/resume.tex
+++ b/resume.tex
@@ -132,5 +132,10 @@
         {GNU/Linux and *BSD system administration and networking.}
 \end{skillssection}
 
+\footerinfo{
+    \small\centerline{The source code of the résumé is available at
+        https://github.com/nicolalamacchia/resume}
+}
+
 \end{document}
 
