Add workflow and action to build the resume

--- a/resume.tex
+++ b/resume.tex
@@ -133,7 +133,9 @@
 \end{skillssection}
 
 \footerinfo{
-    \small\centerline{The source code of the résumé is available at
+    \small\centerline{Build %BuildHash%
+        \space\textemdash\space
+        The source code of the résumé is available at
         https://github.com/nicolalamacchia/resume}
 }
 
