--- a/resume.cls
+++ b/resume.cls
@@ -107,9 +107,9 @@
             {\large\bfseries}
             {}{0pt}{}
 
-        \subsection{\large\bfseries #1\thickspace}%
-        \ifthenelse{\equal{#2}{}}{}{at \thickspace\textbf{#2}\thickspace}%
-        \ifthenelse{\equal{#5}{}}{}{\space#5\thickspace}%
+        \subsection{\large\bfseries #1\enspace}%
+        \ifthenelse{\equal{#2}{}}{}{at \enspace\textbf{#2}\enspace}%
+        \ifthenelse{\equal{#5}{}}{}{\space#5\enspace}%
         \ifthenelse{\equal{#3}{}}{}{%
             (%
                 #3%
