Fix footer note

--- a/resume.tex
+++ b/resume.tex
@@ -133,7 +133,7 @@
 \end{skillssection}
 
 \footerinfo{
-    \small\centerline{Build %BuildHash%
+    \small\centerline{Build %BuildHash%%
         \space\textemdash\space
         The source code of the résumé is available at
         https://github.com/nicolalamacchia/resume}
