--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,5 @@
 \documentclass{resume}
+\usepackage{hyperref}
 \usepackage{tipa}
 
 \begin{document}
@@ -136,7 +137,7 @@
     \small\centerline{Build %BuildHash%%
         \space\textemdash\space
         The source code of the résumé is available at
-        https://github.com/nicolalamacchia/resume}
+        \url{https://github.com/nicolalamacchia/resume}}
 }
 
 \end{document}
