Update footer text

--- a/resume.tex
+++ b/resume.tex
@@ -136,7 +136,7 @@
 \footerinfo{
     \small\centerline{Build %BuildHash%%
         \space\textemdash\space
-        The source code of the résumé is available at
+        The source code of this résumé is available at
         \url{https://github.com/nicolalamacchia/resume}}
 }
 
