--- a/resume.tex
+++ b/resume.tex
@@ -24,26 +24,26 @@
     {Percona, LLC}%
     {Jun. 2020}{Present}%
     {Remote}%
-    {Working on Percona Monitoring and Management and on the new Percona SaaS
-        platform.}
+    {Working on \textbf{Percona Monitoring and Management} and on the new
+        Percona \textbf{SaaS platform.}}
 
 \activity{Senior Software Engineer}%
     {Dottori.it S.r.l.}%
     {Dec. 2019}{May 2020}%
     {Milan, IT}%
-    {Worked on the migration of a legacy PHP monolith to microservices mostly
-        written in Elixir/Phoenix, deployed on a Kubernetes cluster hosted on
-        Amazon AWS.}
+    {Worked on the migration of a legacy PHP monolith to \textbf{microservices}
+        mostly written in \textbf{Elixir}/Phoenix, deployed on a
+        \textbf{Kubernetes} cluster hosted on Amazon \textbf{AWS}.}
 
 \activity{Senior Software Engineer}%
     {eBay, Inc.}%
     {Jan. 2018}{Aug. 2019}%
     {Milan, IT}%
-    {Front end representative for the architecture team. Facilitated the
-        decomposition of a legacy monolith to component-based, well tested and
+    {Front end representative for the \textbf{architecture} team. Facilitated the
+        decomposition of a legacy monolith to component-based, well \textbf{tested} and
         independently deployable applications, using Back-end-For-Front-ends
-        (BFFs) written in Node.js and deployed in Continuous Delivery. The aim
-        was also to improve observability and to reduce friction in
+        (\textbf{BFF}s) written in Node.js and deployed in \textbf{Continuous Delivery}. The aim
+        was also to improve \textbf{observability} and to reduce friction in
         implementing service monitoring. Worked also on the definition of a
         more modern architecture with a strong focus on SEO, usability and
         performance.}
@@ -52,19 +52,21 @@
     {Cloud Academy, Inc.}%
     {Jun. 2017}{Dec. 2017}%
     {Mendrisio, CH}%
-    {Worked on isomorphic React/Redux applications (with Redux-Saga to manage
-        side effects), using server-side rendering (with Next.js) and an atomic
-        architecture, with a storybook-driven workflow. The applications
-        consumed RESTful APIs from the Python (Django) backend.}
+    {Worked on \textbf{isomorphic React/Redux} applications (with
+        \textbf{Redux-Saga} to manage side effects), using server-side
+        rendering (with \textbf{Next.js}) and an \textbf{atomic architecture},
+        with a \textbf{storybook}-driven workflow. The applications consumed
+        RESTful APIs from the \textbf{Python} (Django) backend.}
 
 \activity{Full Stack Engineer}%
     {Ominee S.r.l.}%
     {Jan. 2015}{Jun. 2017}%
     {Turin, IT}%
-    {Led the development of the company’s MVP, using a stacks based on Go,
-        Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
-        databases. In charge of software architecture and operations
-        (encouraging and implementing a DevOps approach).}
+    {Led the development of the company’s MVP, using a stacks based on
+        \textbf{Go}, Flask (Python), Polymer, AngularJS, \textbf{NoSQL}
+        (MongoDB, Redis) and SQL databases. In charge of software architecture
+        and operations (encouraging and implementing a \textbf{DevOps}
+        approach).}
 
 \activity{Mentor and Evangelist (pro bono)}%
     {Puglia SOS}%
@@ -81,7 +83,7 @@
     {Led the design process for a web application with the goal of creating an
         easily customizable suite to manage and improve the productivity of
         teams in small and medium-sized businesses.  The application was based
-        on the full MEAN stack and was cloud-hosted.}
+        on the full \textbf{MEAN stack} and was \textbf{cloud}-hosted.}
 
 \activity{Freelance Developer}%
     {}%
