--- a/resume.tex
+++ b/resume.tex
@@ -95,8 +95,10 @@
 
 \section{Languages}
 
-\lang{Italian}{native language}
-\lang{English}{full professional proficiency}
+\begin{languagessection}
+    \lang{Italian}{native language}
+    \lang{English}{full professional proficiency}
+\end{languagessection}
 
 \section{Skills / Keywords}
 
