--- a/resume.tex
+++ b/resume.tex
@@ -111,8 +111,10 @@
     \skills{Frameworks and Libraries}%
         {Flask, Node.js, Express, Phoenix, Vue.js, React, Redux, Web
             Components; Celery, RabbitMQ, Kafka, NLTK;\\%
-            front end workflow: task runners, package managers, webpack, etc.;
-            testing: py.test, tox, Jest, et al.; end2end testing.}
+            front end workflow: task runners, package managers, webpack,
+            etc.;\\%
+            testing: py.test, tox, Jest, et al.;\\%
+            end2end testing.}
 
     \skills{RDBMS}%
         {MySQL, MariaDB, PostgreSQL, SQLite.}
