Add missing location in education

--- a/resume.tex
+++ b/resume.tex
@@ -94,7 +94,7 @@
 \section{Education}
 
 \activity{Electronic Engineering}{Università degli Studi Roma Tre}%
-    {2007}{2011 \lbrack \textit{interrupted}\rbrack}{}{}
+    {2007}{2011 \lbrack \textit{interrupted}\rbrack}{Rome, IT}{}
 
 \section{Languages}
 
