--- a/resume.tex
+++ b/resume.tex
@@ -107,23 +107,26 @@
 
 \begin{skillssection}
     \skills{Programming and Markup Languages}%
-        {Python, Shell scripting, C, Go, Elixir, PHP, JavaScript (including
-            ES6+);\\%
+        {Python, JavaScript, TypeScript, Go, Elixir, PHP, C/C++; Shell
+            scripting;\\%
             XHTML, HTML5, CSS3, SASS, LESS, Stylus.}
 
     \skills{Frameworks and Libraries}%
         {Flask, Node.js, Express, Phoenix, Vue.js, React, Redux, Web
-            Components; Celery, RabbitMQ, Kafka, NLTK;\\%
+            Components; Celery, NLTK;\\%
             front end workflow: task runners, package managers, webpack,
             etc.;\\%
-            testing: py.test, tox, Jest, et al.;\\%
-            end2end testing.}
+            testing: py.test, tox, Jest, et al.; end2end testing.}
 
-    \skills{RDBMS}%
-        {MySQL, MariaDB, PostgreSQL, SQLite.}
+    \skills{Databases}%
+        {RDBMS: MySQL, MariaDB, PostgreSQL, SQLite;\\%
+            NoSQL: MongoDB, CouchDB.}
 
-    \skills{NoSQL Databases}%
-        {MongoDB, CouchDB, Redis.}
+    \skills{Message Brokers}%
+        {RabbitMQ, ZeroMQ, Kafka.}
+
+    \skills{Cache Systems and Web Accelerators}%
+        {Redis, Memcached, Varnish.}
 
     \skills{Version Control Systems}%
         {Git, Mercurial, Subversion.}
