Update current job title

--- a/resume.tex
+++ b/resume.tex
@@ -23,12 +23,13 @@
 
 \section{Professional Experience}
 
-\activity{Senior Software Engineer}%
+\activity{Technical Team Lead}%
     {Percona, LLC}%
     {Jun. 2020}{Present}%
     {Remote}%
-    {Working on Percona Monitoring and Management and on the new Percona SaaS
-        platform.}
+    {Joined the company as a Senior Software Engineer, working on Percona
+        Monitoring and Management and on the new Percona SaaS platform.
+        Currently leading two SaaS teams.}
 
 \activity{Senior Software Engineer}%
     {Dottori.it S.r.l.}%
