--- a/resume.tex
+++ b/resume.tex
@@ -75,7 +75,7 @@
     {2013}{Present}%
     {Barletta, IT}%
     {In charge of events organization (such as Linux Day) for the NPO Puglia
-        Software Open Source. Mentored highschool-aged students in a
+        Software Open Source. Mentored high school aged students in a
         programming course called CodingLab.}
 
 \activity{Software Engineer}%
