--- a/resume.tex
+++ b/resume.tex
@@ -65,7 +65,7 @@
     {Ominee S.r.l.}%
     {Jan. 2015}{Jun. 2017}%
     {Turin, IT}%
-    {Led the development of the company’s MVP, using a stacks based on Go,
+    {Led the development of the company’s MVP, using a stack based on Go,
         Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
         databases. In charge of software architecture and operations
         (encouraging and implementing a DevOps approach).}
