Update professional experience

--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
     {Remote}%
     {Joined the company as a Senior Software Engineer, working on Percona
         Monitoring and Management and on the new Percona SaaS platform.
-        Currently leading two SaaS teams.}
+        Currently leading the SaaS portal team.}
 
 \activity{Senior Software Engineer}%
     {Dottori.it S.r.l.}%
