--- a/resume.tex
+++ b/resume.tex
@@ -36,7 +36,7 @@
     {Dec. 2019}{May 2020}%
     {Milan, IT}%
     {Worked on the migration of a legacy PHP monolith to microservices mostly
-        written in Elixir/Phoenix, deployed on a Kubernetes cluster hosted on
+        written in Elixir/Phoenix, deployed to a Kubernetes cluster hosted on
         Amazon AWS.}
 
 \activity{Senior Software Engineer}%
