--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
     {hire@nicola.dev}%
     {+39 327 651 4969}%
     {https://nicola.dev}
-    {Como, Italy}
+    {Milan, Italy}
 
 \separator[cvlightgray]
 
