Add PDF author and subject

--- a/resume.tex
+++ b/resume.tex
@@ -5,6 +5,10 @@
 \begin{document}
 
 \title{Nicola Lamacchia - Résumé}
+\author{Nicola Lamacchia}
+\hypersetup{
+    pdfsubject={Professional Experience, Education and Skills}
+}
 
 \heading%
     {Nicola}
