Update the font size of the footer

--- a/resume.tex
+++ b/resume.tex
@@ -111,7 +111,7 @@
 \section{Skills / Keywords}
 
 \footerinfo{
-    \small\centerline{Build %BuildHash%%
+    \footnotesize\centerline{Build %BuildHash%%
         \space\textemdash\space
         The source code of this résumé is available at
         \url{https://github.com/nicolalamacchia/resume}}
