--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
 
 \summary{Passionate software engineer, with extensive experience on web
     application development and operations, software architecture and technical
-    leadership. FOSS advocate. Embedded development and AI enthusiast.}
+    leadership. FOSS advocate. Embedded development and ML enthusiast.}
 
 \section{Professional Experience}
 
