Minor text update

--- a/resume.tex
+++ b/resume.tex
@@ -60,10 +60,11 @@
     {Cloud Academy, Inc.}%
     {Jun. 2017}{Dec. 2017}%
     {Mendrisio, CH}%
-    {Worked on isomorphic React/Redux applications (with Redux-Saga to manage
-        side effects), using server-side rendering (with Next.js) and an atomic
-        architecture, with a storybook-driven workflow. The applications
-        consumed RESTful APIs from the Python (Django) back end.}
+    {Worked on isomorphic React applications (with Redux to manage the state and
+        Redux-Saga to manage side effects), using server-side rendering (with
+        Next.js) and an atomic architecture, with a storybook-driven workflow.
+        The applications consumed RESTful APIs from the Python (Django) back
+        end.}
 
 \activity{Full Stack Engineer}%
     {Ominee S.r.l.}%
