Fix an apostrophe

--- a/resume.tex
+++ b/resume.tex
@@ -70,7 +70,7 @@
     {Ominee S.r.l.}%
     {Jan. 2015}{Jun. 2017}%
     {Turin, IT}%
-    {Led the development of the company’s MVP, using a stack based on Go,
+    {Led the development of the company's MVP, using a stack based on Go,
         Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
         databases. In charge of software architecture and operations
         (encouraging and implementing a DevOps approach).}
@@ -157,4 +157,3 @@
 \end{skillssection}
 
 \end{document}
-
