--- a/resume.tex
+++ b/resume.tex
@@ -32,80 +32,86 @@
 
 \section{Professional Experience}
 
-\activity{Technical Team Lead}%
-    {Percona, LLC}%
-    {Jun. 2020}{Present}%
-    {Remote}%
-    {Joined the company as a Senior Software Engineer, working on Percona
-        Monitoring and Management and on the new Percona SaaS platform.
-        Currently leading the SaaS portal team.}
+\begin{cvsection}
+    \activity{Senior Software Engineer}%
+        {Percona, LLC}%
+        {Jun. 2020}{Mar. 2021}%
+        {Remote}%
+        {%
+            Joined the company as a Senior Software Engineer, working on Percona
+            Monitoring and Management and on the new Percona SaaS platform.
+            Currently leading the SaaS portal team.
+        }
 
-\activity{Senior Software Engineer}%
-    {Dottori.it S.r.l.}%
-    {Dec. 2019}{May 2020}%
-    {Milan, IT}%
-    {Worked on the migration of a legacy PHP monolith to microservices mostly
-        written in Elixir/Phoenix, deployed to a Kubernetes cluster hosted on
-        Amazon AWS.}
+    \activity{Senior Software Engineer}%
+        {Dottori.it S.r.l.}%
+        {Dec. 2019}{May 2020}%
+        {Milan, IT}%
+        {Worked on the migration of a legacy PHP monolith to microservices mostly
+            written in Elixir/Phoenix, deployed to a Kubernetes cluster hosted on
+            Amazon AWS.}
 
-\activity{Senior Software Engineer}%
-    {eBay, Inc.}%
-    {Jan. 2018}{Aug. 2019}%
-    {Milan, IT}%
-    {Front end representative for the architecture team. Facilitated the
-        decomposition of a legacy monolith to component-based, well tested and
-        independently deployable applications, using Back-end-For-Front-ends
-        (BFFs) written in Node.js and deployed in Continuous Delivery. The aim
-        was also to improve observability and to reduce friction in
-        implementing service monitoring. Worked also on the definition of a
-        more modern architecture with a strong focus on SEO, usability and
-        performance.}
+    \activity{Senior Software Engineer}%
+        {eBay, Inc.}%
+        {Jan. 2018}{Aug. 2019}%
+        {Milan, IT}%
+        {Front end representative for the architecture team. Facilitated the
+            decomposition of a legacy monolith to component-based, well tested and
+            independently deployable applications, using Back-end-For-Front-ends
+            (BFFs) written in Node.js and deployed in Continuous Delivery. The aim
+            was also to improve observability and to reduce friction in
+            implementing service monitoring. Worked also on the definition of a
+            more modern architecture with a strong focus on SEO, usability and
+            performance.}
 
-\activity{Full Stack Engineer}%
-    {Cloud Academy, Inc.}%
-    {Jun. 2017}{Dec. 2017}%
-    {Mendrisio, CH}%
-    {Worked on isomorphic React applications (with Redux to manage the state and
-        Redux-Saga to manage side effects), using server-side rendering (with
-        Next.js) and an atomic architecture, with a storybook-driven workflow.
-        The applications consumed RESTful APIs from the Python (Django) back
-        end.}
+    \activity{Full Stack Engineer}%
+        {Cloud Academy, Inc.}%
+        {Jun. 2017}{Dec. 2017}%
+        {Mendrisio, CH}%
+        {Worked on isomorphic React applications (with Redux to manage the state and
+            Redux-Saga to manage side effects), using server-side rendering (with
+            Next.js) and an atomic architecture, with a storybook-driven workflow.
+            The applications consumed RESTful APIs from the Python (Django) back
+            end.}
 
-\activity{Full Stack Engineer}%
-    {Ominee S.r.l.}%
-    {Jan. 2015}{Jun. 2017}%
-    {Turin, IT}%
-    {Led the development of the company's MVP, using a stack based on Go,
-        Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
-        databases. In charge of software architecture and operations
-        (encouraging and implementing a DevOps approach).}
+    \activity{Full Stack Engineer}%
+        {Ominee S.r.l.}%
+        {Jan. 2015}{Jun. 2017}%
+        {Turin, IT}%
+        {Led the development of the company's MVP, using a stack based on Go,
+            Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
+            databases. In charge of software architecture and operations
+            (encouraging and implementing a DevOps approach).}
 
-\activity{Mentor and Evangelist (pro bono)}%
-    {Puglia SOS}%
-    {2013}{Present}%
-    {Barletta, IT}%
-    {In charge of events organization (such as Linux Day) for the NPO Puglia
-        Software Open Source. Mentored high school aged students in a
-        programming course called CodingLab.}
+    \activity{Mentor and Evangelist (pro bono)}%
+        {Puglia SOS}%
+        {2013}{Present}%
+        {Barletta, IT}%
+        {In charge of events organization (such as Linux Day) for the NPO Puglia
+            Software Open Source. Mentored high school aged students in a
+            programming course called CodingLab.}
 
-\activity{Software Engineer}%
-    {Canoe ERP}%
-    {2013}{2014}%
-    {Barletta, IT}%
-    {Led the design process for a web application with the goal of creating an
-        easily customizable suite to manage and improve the productivity of
-        teams in small and medium-sized businesses.  The application was based
-        on the full MEAN stack and was cloud-hosted.}
+    \activity{Software Engineer}%
+        {Canoe ERP}%
+        {2013}{2014}%
+        {Barletta, IT}%
+        {Led the design process for a web application with the goal of creating an
+            easily customizable suite to manage and improve the productivity of
+            teams in small and medium-sized businesses.  The application was based
+            on the full MEAN stack and was cloud-hosted.}
 
-\activity{Freelance Developer}%
-    {}%
-    {2010}{2013}%
-    {}{}
+    \activity{Freelance Developer}%
+        {}%
+        {2010}{2013}%
+        {}{}
+\end{cvsection}
 
 \section{Education}
 
-\activity{Electronic Engineering}{Università degli Studi Roma Tre}%
-    {2007}{2011 \lbrack \textit{interrupted}\rbrack}{Rome, IT}{}
+\begin{cvsection}
+    \activity{Electronic Engineering}{Università degli Studi Roma Tre}%
+        {2007}{2011 \lbrack \textit{interrupted}\rbrack}{Rome, IT}{}
+\end{cvsection}
 
 \section{Languages}
 
