Update professional experience

--- a/resume.tex
+++ b/resume.tex
@@ -33,6 +33,10 @@
 \section{Professional Experience}
 
 \begin{cvsection}
+    \activity{Technical Team Lead}%
+        {Percona, LLC}%
+        {Apr. 2021}{Present}%
+        {Remote}{}%
     \activity{Senior Software Engineer}%
         {Percona, LLC}%
         {Jun. 2020}{Mar. 2021}%
