Make the summary code more readable

--- a/resume.tex
+++ b/resume.tex
@@ -26,9 +26,11 @@
 
 \separator[cvlightgray]
 
-\summary{Passionate software engineer, with extensive experience on web
+\summary{%
+    Passionate software engineer, with extensive experience on web
     application development and operations, software architecture and technical
-    leadership. FOSS advocate. Embedded development and ML enthusiast.}
+    leadership. FOSS advocate. Embedded development and ML enthusiast.
+}
 
 \section{Professional Experience}
 
