Refactor the content of \footerinfo

--- a/resume.tex
+++ b/resume.tex
@@ -7,10 +7,12 @@
     pdfsubject={Professional Experience, Education and Skills}
 }
 \footerinfo{
-    \footnotesize\centerline{Build %BuildHash%%
+    \footnotesize\centerline{%
+        Build %BuildHash%%
         \space\textemdash\space
         The source code of this résumé is available at
-        \url{https://github.com/nicolalamacchia/resume}}
+        \url{https://github.com/nicolalamacchia/resume}
+    }
 }
 
 \begin{document}
