--- a/resume.tex
+++ b/resume.tex
@@ -133,12 +133,13 @@
 \begin{skillssection}
     \skills{Programming and Markup Languages}%
         {Python, JavaScript, TypeScript, Go, Elixir, PHP, C/C++; Shell
-            scripting;\\%
-            XHTML, HTML5, CSS3, SASS, LESS, Stylus.}
+            scripting (Bash, Zsh, POSIX shells: ash, dash);\\%
+            x86-64, ARM and 6502 assembly;\\%
+            XHTML, HTML5, CSS3, SASS, LESS, Stylus;}
 
     \skills{Frameworks and Libraries}%
-        {Flask, Node.js, Express, Phoenix, Vue.js, React, Redux, Web
-            Components; Celery, NLTK;\\%
+        {Flask, Node.js, Express, Phoenix, Vue.js, React, React Native, Svelte,
+            Redux, Web Components; Celery, NLTK;\\%
             front end workflow: task runners, package managers, webpack,
             etc.;\\%
             testing: py.test, tox, Jest, et al.; end2end testing.}
@@ -165,7 +166,8 @@
         {Docker, Vagrant, Ansible, Jenkins, Kubernetes, Terraform, AWS.}
 
     \skills{Operating Systems and Networking}%
-        {GNU/Linux and *BSD system administration and networking.}
+        {GNU/Linux and *BSD system administration and networking;\\%
+            Knowledge of the ISO/OSI stack and networking RFCs.}
 \end{skillssection}
 
 \end{document}
