--- a/resume.tex
+++ b/resume.tex
@@ -163,7 +163,9 @@
             CSS: BEM, SMACSS.}
 
     \skills{DevOps/Cloud}%
-        {Docker, Vagrant, Ansible, Jenkins, Kubernetes, Terraform, AWS.}
+        {Docker, Vagrant, Ansible, Jenkins, Kubernetes, Terraform, AWS;\\%
+            Monitoring systems and dashboards: Prometheus, Elastic stack,
+            Grafana.}
 
     \skills{Operating Systems and Networking}%
         {GNU/Linux and *BSD system administration and networking;\\%
