Update professional experience
Use bullet points.

--- a/resume.tex
+++ b/resume.tex
@@ -40,73 +40,137 @@
     \activity{Technical Team Lead}%
         {Percona, LLC}%
         {Apr. 2021}{Present}%
-        {Remote}{}%
+        {Remote}%
+        {%
+            \begin{itemize}
+                \item Currently leading the Percona Portal team: mentoring and
+                    coaching junior developers, encouraging them to embrace
+                    modern practices and techniques, such as TDD and Continuous
+                    Deployment, in order to provide high code quality and
+                    software quality.
+                \item Fostering the adoption of the Empowered Product Teams
+                    model within the team and the rest of the company, liaising
+                    with the Product Manager and the Product Designer to
+                    study solution feasibility, while contributing to the
+                    overall product discovery and definition of functional
+                    requirements.
+                \item Engaged and worked closely with Product Designers to
+                    define a design system and implemented an easily
+                    customizeable theming system based on design tokens.
+            \end{itemize}
+        }
+
     \activity{Senior Software Engineer}%
         {Percona, LLC}%
         {Jun. 2020}{Mar. 2021}%
         {Remote}%
         {%
-            Joined the company as a Senior Software Engineer, working on Percona
-            Monitoring and Management and on the new Percona SaaS platform.
-            Currently leading the SaaS portal team.
+            \begin{itemize}
+                \item Worked on Percona Monitoring and Management and then
+                    participated to the creation of the new Percona SaaS
+                    platform, in particular to what would later become
+                    Percona Portal, by helping to define its architecture,
+                    quality standards, CI/CD pipelines and to identify
+                    non-functional requirements.
+                \item Contributed to the front end architecture of Percona
+                    Portal and to the creation of a UI library which was then
+                    published as a public package (hosted on npm.js).
+                \item Liaised with DevOps engineers, QA engineers and architects
+                    to improve CI/CD pipelines and led the introduction of a
+                    Continuous Deployment pipeline, starting from lower
+                    environments.
+            \end{itemize}
         }
 
     \activity{Senior Software Engineer}%
         {Dottori.it S.r.l.}%
         {Dec. 2019}{May 2020}%
         {Milan, IT}%
-        {Worked on the migration of a legacy PHP monolith to microservices mostly
-            written in Elixir/Phoenix, deployed to a Kubernetes cluster hosted on
-            Amazon AWS.}
+        {%
+            \begin{itemize}
+                \item Worked on the migration of a legacy PHP monolith to
+                    microservices mostly written in Elixir/Phoenix, deployed to
+                    a Kubernetes cluster hosted on Amazon AWS.
+                \item Mentored front end junior developers and helped them to
+                    move away from a monolithic front end, in favor of a Single
+                    Page Application built with React.
+            \end{itemize}
+        }
 
     \activity{Senior Software Engineer}%
         {eBay, Inc.}%
         {Jan. 2018}{Aug. 2019}%
         {Milan, IT}%
-        {Front end representative for the architecture team. Facilitated the
-            decomposition of a legacy monolith to component-based, well tested and
-            independently deployable applications, using Back-end-For-Front-ends
-            (BFFs) written in Node.js and deployed in Continuous Delivery. The aim
-            was also to improve observability and to reduce friction in
-            implementing service monitoring. Worked also on the definition of a
-            more modern architecture with a strong focus on SEO, usability and
-            performance.}
+        {%
+            \begin{itemize}
+                \item Front end representative for the architecture team.
+                \item Facilitated the decomposition of a legacy monolith to
+                    component-based, well tested and independently deployable
+                    applications, using Back-end-For-Front-ends (BFFs) written
+                    in Node.js and deployed in Continuous Delivery. The aim was
+                    also to substantially improve observability and to reduce
+                    friction in implementing service monitoring.
+                \item Worked on the definition of a more modern architecture
+                    with a strong focus on SEO, usability and performance,
+                    following a mobile-first approach.
+            \end{itemize}
+        }
 
     \activity{Full Stack Engineer}%
         {Cloud Academy, Inc.}%
         {Jun. 2017}{Dec. 2017}%
         {Mendrisio, CH}%
-        {Worked on isomorphic React applications (with Redux to manage the state and
-            Redux-Saga to manage side effects), using server-side rendering (with
-            Next.js) and an atomic architecture, with a storybook-driven workflow.
-            The applications consumed RESTful APIs from the Python (Django) back
-            end.}
+        {%
+            \begin{itemize}
+                \item Worked on isomorphic React applications (with Redux to
+                    manage the state and Redux-Saga to manage side effects),
+                    using server-side rendering (with Next.js) and an atomic
+                    architecture, with a Storybook-driven workflow. The
+                    applications consumed RESTful APIs from the Python (Django)
+                    back end.
+            \end{itemize}
+        }
 
     \activity{Full Stack Engineer}%
         {Ominee S.r.l.}%
         {Jan. 2015}{Jun. 2017}%
         {Turin, IT}%
-        {Led the development of the company's MVP, using a stack based on Go,
-            Flask (Python), Polymer, AngularJS, NoSQL (MongoDB, Redis) and SQL
-            databases. In charge of software architecture and operations
-            (encouraging and implementing a DevOps approach).}
+        {%
+            \begin{itemize}
+                \item Led the development of the company's MVP, using a stack
+                    based on Go, Flask (Python), Polymer, AngularJS, NoSQL
+                    (MongoDB, Redis) and SQL databases.
+                \item In charge of software architecture and operations,
+                    encouraging and implementing a DevOps approach.
+            \end{itemize}
+        }
 
     \activity{Mentor and Evangelist (pro bono)}%
         {Puglia SOS}%
         {2013}{Present}%
         {Barletta, IT}%
-        {In charge of events organization (such as Linux Day) for the NPO Puglia
-            Software Open Source. Mentored high school aged students in a
-            programming course called CodingLab.}
+        {%
+            \begin{itemize}
+                \item In charge of events organization (such as Linux Day) for
+                    the NPO Puglia Software Open Source.
+                \item Mentored high school aged students in a programming course
+                    called CodingLab.
+            \end{itemize}
+        }
 
     \activity{Software Engineer}%
         {Canoe ERP}%
         {2013}{2014}%
         {Barletta, IT}%
-        {Led the design process for a web application with the goal of creating an
-            easily customizable suite to manage and improve the productivity of
-            teams in small and medium-sized businesses.  The application was based
-            on the full MEAN stack and was cloud-hosted.}
+        {%
+            \begin{itemize}
+                \item Led the design process for a web application with the goal
+                    of creating an easily customizable suite to manage and
+                    improve the productivity of teams in small and medium-sized
+                    businesses. The application was based on the full MEAN
+                    stack and was cloud-hosted.
+            \end{itemize}
+        }
 
     \activity{Freelance Developer}%
         {}%
