--- a/resume.tex
+++ b/resume.tex
@@ -203,7 +203,8 @@
 
     \skills{Frameworks and Libraries}%
         {Flask, Node.js, Express, Phoenix, Vue.js, React, React Native, Svelte,
-            Redux, Web Components; Celery, NLTK;\\%
+            Redux, Web Components, Celery, NLTK, NumPy, pandas, Matplotlib,
+            D3.js;\\%
             front end workflow: task runners, package managers, webpack,
             etc.;\\%
             testing: py.test, tox, Jest, et al.; end2end testing.}
@@ -227,7 +228,8 @@
             CSS: BEM, SMACSS.}
 
     \skills{DevOps/Cloud}%
-        {Docker, Vagrant, Ansible, Jenkins, Kubernetes, Terraform, AWS;\\%
+        {Docker, Vagrant, Ansible, Jenkins, Kubernetes, Terraform, AWS,
+            Cloudflare;\\%
             Monitoring systems and dashboards: Prometheus, Elastic stack,
             Grafana.}
 
